[project]
name = "exotel-chatbot-dial-in"
version = "0.1.0"
description = "Exotel dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[webrtc,daily,silero,openai,local-smart-turn-v3,runner,elevenlabs]>=0.0.85",
  "pipecatcloud>=0.2.4",
  "python-dotenv",
  "loguru",
  "httpx",
  "uvicorn",
  "anyio"
]